fix text align

--- a/0x02-CSS_advanced/styles/26-style.css
+++ b/0x02-CSS_advanced/styles/26-style.css
@@ -138,6 +138,9 @@ a:active {
     background-color: var(--color-primary);
     text-decoration: none;
 }
+.card-testimonial {
+    text-align: center;
+}
 .card-testimonial .card-avatar {
     border-radius: 50%;
     width: 10rem;
